--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/taco.html">Fish Taco Sauce</a>
+    <ul>
+       <li><a href="recipes/taco.html">Fish Taco Sauce</a></li> 
+        <li><a href="recipes/chicken.html">Popcorn Chicken</a></li>
+        <li><a href="recipes/burger.html">Burger</a></li>
+    </ul>
+
+
     
 </body>
 </html>
