--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-       <li><a href="recipes/taco.html">Fish Taco Sauce</a></li> 
-        <li><a href="recipes/chicken.html">Popcorn Chicken</a></li>
-        <li><a href="recipes/burger.html">Burger</a></li>
+       <li><a href="recipes/taco.html">Best Ground Beef Taco Recipe</a></li> 
+        <li><a href="recipes/chicken.html">Easy Shredded Mexican Chicken</a></li>
+        <li><a href="recipes/chikfila.html">Copycat Chick-Fil-A Sauce</a></li>
     </ul>
 
 
